--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <img src="./111598000.svg" width="256">
+      <img src="./林立森.svg" width="256">
     </div>
   </div>
 
