--- a/hw01/index.html
+++ b/hw01/index.html
@@ -202,7 +202,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      作業程式碼 GitHub 連結 https://www.github.com/Edward-Pao/ca2022f/hw01/src/
+      作業程式碼 GitHub 連結 https://github.com/NTUT-CG-Lab/ca2022f-hw-LINlisen/tree/main/hw01/src
     </div>
   </div>
 
