--- a/index.html
+++ b/index.html
@@ -134,12 +134,7 @@
     </div>
   </div>
 
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <img src="./林立森.svg" width="256">
-    </div>
-  </div>
+
 
 
 
@@ -162,7 +157,13 @@
     <div class="col-md-2 twenty">HW11<hr><a href="./hw11/index.html"><img src="./html.svg" width="64px"></a></div>
     <div class="col-md-2 twenty">HW12<hr><a href="./hw12/index.html"><img src="./html.svg" width="64px"></a></div>
   </div>
-
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
+      <img src="./林立森.svg" width="256">
+	  <img src="./Cubism_2D.png" width="500">
+    </div>
+  </div>
 
 </body>
 </html>
