--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <img src="./林立森.svg" width="256">
-	  <img src="./Cubism_2D.png" width="500">
+	  <img src="./hw00/Cubism_2D.png" width="500">
     </div>
   </div>
 
