--- a/hw00/index.html
+++ b/hw00/index.html
@@ -138,24 +138,27 @@
 
 
 
-  <!-- ------------------------------------------------>
-  <div class="row">
-    <div class="col-md-2 twenty">HW01<hr><a href="./hw01/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW02<hr><a href="./hw02/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW03<hr><a href="./hw03/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW04<hr><a href="./hw04/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW05<hr><a href="./hw05/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW06<hr><a href="./hw06/index.html"><img src="./html.svg" width="64px"></a></div>
-  </div>
+  <div class="row hw12">
+    <div class="col twenty"><a href="../hw01/index.html">01<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw02/index.html">02<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw03/index.html">03<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw04/index.html">04<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw05/index.html">05<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw06/index.html">06<img src="./html.svg" width="30px"></a></div>
 
-  <!-- ------------------------------------------------>
-  <div class="row">
-    <div class="col-md-2 twenty">HW07<hr><a href="./hw07/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW08<hr><a href="./hw08/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW09<hr><a href="./hw09/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW10<hr><a href="./hw10/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW11<hr><a href="./hw11/index.html"><img src="./html.svg" width="64px"></a></div>
-    <div class="col-md-2 twenty">HW12<hr><a href="./hw12/index.html"><img src="./html.svg" width="64px"></a></div>
+    <div class="col twenty"><a href="../hw07/index.html">07<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw08/index.html">08<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw09/index.html">09<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw10/index.html">10<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw11/index.html">11<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw12/index.html">12<img src="./html.svg" width="30px"></a></div>
+
+    <div class="col twenty"><a href="../hw13/index.html">13<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw14/index.html">14<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw15/index.html">15<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw16/index.html">16<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw17/index.html">17<img src="./html.svg" width="30px"></a></div>
+    <div class="col twenty"><a href="../hw18/index.html">18<img src="./html.svg" width="30px"></a></div>
   </div>
   <!-- ------------------------------------------------>
   <div class="row hw12">
