--- a/hw01/index.html
+++ b/hw01/index.html
@@ -225,7 +225,7 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>2</td>
           <td>下載 CubismWebSamples</td>
         </tr>
@@ -235,7 +235,7 @@
           <td>編譯執行 CubismWebSamples</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>2</td>
           <td>更換其他 Cubism 人物模型、錄製1920×1080影片(滑鼠跟隨)、發佈網頁</td>
         </tr>
