--- a/hw00/index.html
+++ b/hw00/index.html
@@ -163,7 +163,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <img src="./林立森.svg" width="256">
+      <img src="./LINlisen.svg" width="256">
 	  <img src="./LINlisen.png" width="500">
     </div>
   </div>
