--- a/hw02/index.html
+++ b/hw02/index.html
@@ -263,7 +263,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="./hw02Demo.mov" type="video/mov">
+        <source src="./hw02Demo.mp4" type="video/mp4">
       </video>
     </div>
   </div>
