--- a/hw02/index.html
+++ b/hw02/index.html
@@ -210,7 +210,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。
+      透過學習更改Live2d的人物讓我以後在開發網站時能夠隨心所欲的設定我的角色位置以及大小，並且可以透過window.update函數讓人物能有移動或者其他的動態效果可以設定，讓整個網頁可以更加活潑生動，而不是單一呆板的網頁畫面。
     </div>
   </div>
 
