--- a/hw04/index.html
+++ b/hw04/index.html
@@ -195,7 +195,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 02</h1>
+      <h1>作業 04</h1>
     </div>
   </div>
 
@@ -210,7 +210,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      透過學習更改Live2d的人物讓我以後在開發網站時能夠隨心所欲的設定我的角色位置以及大小，並且可以透過window.update函數讓人物能有移動或者其他的動態效果可以設定，讓整個網頁可以更加活潑生動，而不是單一呆板的網頁畫面。
+      透過這次作業學習到如何在網頁上新增face landmarks detection的功能，除了有live的偵測也可以透過上傳影片來偵測影片中的人臉，學到這些後如果可以跟live2d的角色結合，那網頁一定會很有趣。
     </div>
   </div>
 
@@ -227,33 +227,23 @@
         <tr>
           <td rowspan="7" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
-          <td id='m1'>0</td>
-          <td>下載作業程式並且執行安裝</td>
+          <td id='m1'>4</td>
+          <td>下載專案成功編譯</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>1</td>
-          <td>設定畫布寬高</td>
+          <td id='m2'>3</td>
+          <td>將編譯好的檔案放到github class room上的hw04，並且網頁上能夠成功使用。</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
-          <td id='m3'>3</td>
-          <td>補上對人物的上下左右縮放的程式碼</td>
+          <td id='m3'>1</td>
+          <td>錄製一段live_video的Demo影片</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
-          <td id='m4'>4</td>
-          <td>補上拖拉切換背景的程式碼</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked="checked" ></td>
-          <td id='m5'>1</td>
-          <td>錄製一段1920*1080影片(操控上下左右縮放、換背景)，上傳網頁至github classroom</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox6" checked="checked" /></td>
-          <td id='m6'>1</td>
-          <td>藉由查看typescrip程式碼學習如何調用window.updat函數</td>
+          <td id='m4'>2</td>
+          <td>成功編譯建置upload_video並且錄製Demo影片</td>
         </tr>
       </table>
     </div>
@@ -263,7 +253,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="./hw02Demo.mp4" type="video/mp4">
+        <source src="./hw04Demo.mp4" type="video/mp4">
       </video>
     </div>
   </div>
