--- a/hw05/index.html
+++ b/hw05/index.html
@@ -195,7 +195,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      <h1>作業 02</h1>
+      <h1>作業 05</h1>
     </div>
   </div>
 
@@ -210,7 +210,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      透過學習更改Live2d的人物讓我以後在開發網站時能夠隨心所欲的設定我的角色位置以及大小，並且可以透過window.update函數讓人物能有移動或者其他的動態效果可以設定，讓整個網頁可以更加活潑生動，而不是單一呆板的網頁畫面。
+      將前面所學到的臉部偵測與Cubism角色做結合呈現在網頁上真有趣，沒想到竟然可以在網頁上展現出效果如此良好的臉部偵測，這樣未來在製作網頁上就有更多樣化以及不一樣的操作方式了。
     </div>
   </div>
 
@@ -228,33 +228,38 @@
           <td rowspan="7" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>0</td>
-          <td>下載作業程式並且執行安裝</td>
+          <td>Face-Landmarks-Detection 與 Cubism 呈現於網頁上</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
           <td id='m2'>1</td>
-          <td>設定畫布寬高</td>
+          <td>Cubism角色眉毛對接</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
-          <td id='m3'>3</td>
-          <td>補上對人物的上下左右縮放的程式碼</td>
+          <td id='m3'>2</td>
+          <td>Cubism角色左右擺頭</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
-          <td id='m4'>4</td>
-          <td>補上拖拉切換背景的程式碼</td>
+          <td id='m4'>2</td>
+          <td>Cubism角色上下點頭</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked="checked" ></td>
           <td id='m5'>1</td>
-          <td>錄製一段1920*1080影片(操控上下左右縮放、換背景)，上傳網頁至github classroom</td>
+          <td>Cubism角色眼睛開闔</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox6" checked="checked" /></td>
-          <td id='m6'>1</td>
-          <td>藉由查看typescrip程式碼學習如何調用window.updat函數</td>
+          <td id='m6'>2</td>
+          <td>Cubism角色歪頭</td>
         </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox7" checked="checked" /></td>
+          <td id='m6'>2</td>
+          <td>Cubism角色嘴巴開闔</td>
+        </tr>        
       </table>
     </div>
   </div>
@@ -263,7 +268,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="./hw02Demo.mp4" type="video/mp4">
+        <source src="./hw05Demo.mp4" type="video/mp4">
       </video>
     </div>
   </div>
