--- a/hw03/index.html
+++ b/hw03/index.html
@@ -210,7 +210,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      透過學習更改Live2d的人物讓我以後在開發網站時能夠隨心所欲的設定我的角色位置以及大小，並且可以透過window.update函數讓人物能有移動或者其他的動態效果可以設定，讓整個網頁可以更加活潑生動，而不是單一呆板的網頁畫面。
+      學習到如何透過Slider來調控Cubism角色的一些部分，例如頭部的轉動、眉毛位置，如果能夠結合TensorFlow.js FaceLandmarks Detection來偵測我的臉部並且控制角色的頭部和臉部，那整體的網頁內容一定更加有趣
     </div>
   </div>
 
@@ -227,33 +227,23 @@
         <tr>
           <td rowspan="7" id="myTotal"></td>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
-          <td id='m1'>0</td>
-          <td>下載作業程式並且執行安裝</td>
+          <td id='m1'>3</td>
+          <td>綁定參數 (AngleX、AngleY、AngleZ)</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>1</td>
-          <td>設定畫布寬高</td>
+          <td id='m2'>4</td>
+          <td>綁定參數 (BrowLY、BrowRY、BrowLX、BrowRX)</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
-          <td id='m3'>3</td>
-          <td>補上對人物的上下左右縮放的程式碼</td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" ></td>
+          <td id='m3'>2</td>
+          <td>標準參數、特定參數控制</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
-          <td id='m4'>4</td>
-          <td>補上拖拉切換背景的程式碼</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked="checked" ></td>
-          <td id='m5'>1</td>
-          <td>錄製一段1920*1080影片(操控上下左右縮放、換背景)，上傳網頁至github classroom</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox6" checked="checked" /></td>
-          <td id='m6'>1</td>
-          <td>藉由查看typescrip程式碼學習如何調用window.updat函數</td>
+          <td id='m4'>1</td>
+          <td>觸碰身體會發出聲音</td>
         </tr>
       </table>
     </div>
@@ -263,7 +253,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="./hw02Demo.mp4" type="video/mp4">
+        <source src="./hw03Demo.mp4" type="video/mp4">
       </video>
     </div>
   </div>
