--- a/hw03/index.html
+++ b/hw03/index.html
@@ -236,7 +236,7 @@
           <td>綁定參數 (BrowLY、BrowRY、BrowLX、BrowRX)</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" ></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
           <td id='m3'>2</td>
           <td>標準參數、特定參數控制</td>
         </tr>
