--- a/hw07/index.html
+++ b/hw07/index.html
@@ -254,7 +254,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
           <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="./hw07Demo.mp4" type="video/mp4">
+        <source src="./video/hw07Demo.mp4" type="video/mp4">
       </video>
     </div>
   </div>
