--- a/hw13/index.html
+++ b/hw13/index.html
@@ -195,7 +195,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw13">
     <div class="col-md-12 twenty">
-      <h1>作業 12</h1>
+      <h1>作業 13</h1>
     </div>
   </div>
 
@@ -209,7 +209,7 @@
   <!-- ------------------------------------------------>
   <div class="row hw13">
     <div class="col-md-12 twenty">
-      心得
+      我們在這次的電腦動畫專題實作中遇到很多問題，像是一開始MMD模組下載回來發現材質貼圖貼不上去，之後發現是因為需要用日文編碼來解壓縮，不然檔名會丟失，導致MMD模型轉檔過程中貼圖無法成功附著，還有播放動畫時角色跟衣服穿模的問題，之後設置了IK運動解決，因為我們想要實作比較有趣的MV，有功能需要透過撰寫C#腳本來達成，過程有點像是摸石頭過河，大家都沒碰過所以要慢慢找方法，最後用上課教過的event方式配合程式碼來達成效果，雖然跟當初的構想不完全一樣，但效果我們覺得挺不錯的，經過這次對Unity比較熟悉了，因為我們組幾乎沒碰過Unity，有經驗的人只用過Unreal engine，設置上其實有點差距，各有優缺，最後感謝用心上課的助教跟老師，大家辛苦了。
     </div>
   </div>
 
