--- a/hw14/index.html
+++ b/hw14/index.html
@@ -193,143 +193,36 @@
 <div class="container-fluid">
 
   <!-- ------------------------------------------------>
-  <div class="row hw12">
+  <div class="row hw13">
     <div class="col-md-12 twenty">
-      <h1>作業 01</h1>
+      <h1>作業 14</h1>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12">
+  <div class="row hw13">
     <div class="col-md-12 twenty">
-      作業程式碼 GitHub 連結 https://www.github.com/Edward-Pao/ca2022f/hw01/src/
+<input type="button" name="back" onclick="window.location.href='https://drive.google.com/drive/u/0/folders/1rqQkpCmrzIJcGLvdFIAXRIrlnnJyWtpN'" value="...按我...按我...按我...">
     </div>
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12">
+  <div class="row hw13">
     <div class="col-md-12 twenty">
-      心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。心得報告 100 字。
+      AlphaPose與硬體動捕裝置之間的動態捕捉的效果有很明顯的差異性，動捕裝置在擷取人體動作時精準度相當高，但AlphaPose透過影片去抓取動作時若影片中的人可能有部分身體有擋到或者是側身時會導致沒法完全捕捉，這樣再放到Unity角色上時動作看起來會很奇怪，因此若是要透過AlphaPose進行動態捕捉的話可能適合使用正面且沒有過多的旋轉動作效果相對會比較好一點，但相較於硬體AlphaPose就是比較方便，不需要穿著特定衣服，只需要錄影片後將影片偵測後就可以獲得動作檔案。
     </div>
   </div>
 
   <!-- ------------------------------------------------>
-  <div class="row hw12">
+  <div class="row hw13">
     <div class="col-md-12 twenty">
-      <table>
-        <tr>
-          <th>總分</th>
-          <th>完成後打勾</th>
-          <th>配分</th>
-          <th>分項描述</th>
-        </tr>
-        <tr>
-          <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
-          <td id='m1'>1</td>
-          <td>描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>1</td>
-          <td>描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>1</td>
-          <td>描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
-          <td id='m4'>1</td>
-          <td>描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked="checked" ></td>
-          <td id='m5'>2</td>
-          <td>描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox6" checked="checked" /></td>
-          <td id='m6'>2</td>
-          <td>描述</td>
-        </tr>
-        <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox7" checked="checked" /></td>
-          <td id='m7'>2</td>
-          <td>描述</td>
-        </tr>
-      </table>
-    </div>
-  </div>
-
-  <!-- ------------------------------------------------>
-  <div class="row hw12">
-    <div class="col-md-12 twenty">
-      <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
-      </video>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/l9z1kga4A0o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </div>
   </div>
 
   <!-- ------------------------------------------------>
 
   <!-- ------------------------------------------------>
-
-
-<script>
-  $(function() {
-    var f = function() {
-      $(this).next().text($(this).is(':checked') ? '做完' : '未做完');
-    };
-    $('input').change(f).trigger('change');
-  });
-
-  d3.select("#myCheckbox1").on("change",update);
-  d3.select("#myCheckbox2").on("change",update);
-  d3.select("#myCheckbox3").on("change",update);
-  d3.select("#myCheckbox4").on("change",update);
-  d3.select("#myCheckbox5").on("change",update);
-  d3.select("#myCheckbox6").on("change",update);
-  d3.select("#myCheckbox7").on("change",update);
-
-  update();
-  
-  function update(){
-
-    var score = 0;
-
-    if (d3.select("#myCheckbox1").property("checked")){
-      score += parseInt(d3.select('#m1').html());
-    }
-
-    if (d3.select("#myCheckbox2").property("checked")){
-      score += parseInt(d3.select('#m2').html());   
-    }
-
-    if (d3.select("#myCheckbox3").property("checked")){
-      score += parseInt(d3.select('#m3').html());   
-    }
-
-    if (d3.select("#myCheckbox4").property("checked")){
-      score += parseInt(d3.select('#m4').html());   
-    }
-
-    if (d3.select("#myCheckbox5").property("checked")){
-      score += parseInt(d3.select('#m5').html());   
-    }
-
-    if (d3.select("#myCheckbox6").property("checked")){
-      score += parseInt(d3.select('#m6').html());   
-    }
-
-    if (d3.select("#myCheckbox7").property("checked")){
-      score += parseInt(d3.select('#m7').html());   
-    }
-
-    d3.select("#myTotal").html(score);    
-  }
-</script>
 
 </body>
 </html>
