--- a/hw05/src/index.html
+++ b/hw05/src/index.html
@@ -26,6 +26,7 @@ limitations under the License.
       margin: 0;
       display: flex;
       position: relative;
+      background-color:  rgba(0,1,0,1);
     }
 
     #stats {
@@ -54,7 +55,7 @@ limitations under the License.
       position: absolute !important;
       top: 30px;
       left: 25vw;
-      background-color:  rgba(1,1,1,0.3);
+      background-color:  rgba(0,1,0,1);
     }
     #stats {
       position: absolute;
@@ -68,9 +69,10 @@ limitations under the License.
     }
     #output{
       position: absolute;
-      top: 66.1vh;
-      width: 320px;
-      height: 240px;
+      top: 50vh;
+      left: 10.5vw;
+      width: 400px;
+      height: 300px;
     }
     </style>
 </head>
